# api

./: .flake8  .gitignore  .pre-commit-config.yaml  .reviewdog.yml  CHANGELOG.md  Dockerfile  Dockerfile.dev  Pipfile  Procfile  README.md  README_RU.md  alembic.ini  cog.toml  compose.yaml  docker-compose.dev.yml  entrypoint.dev.sh  entrypoint.sh  entrypoint.test.sh  entrypoint_test.sh  justfile  pyproject.toml  pytest.ini  renovate.json  requirements-dev.txt  requirements.txt  setup.cfg  tasks.py
.github/: dependabot.yml  release.yml  update-version.sh
.github/workflows/: build.yml  cd.yml  conventional-label.yml  dockerimage.yml  lint.yml  release-please.yml  release.yml  spicedb-validate.yml  test.yaml  test.yml
alembic/: env.py
alembic/versions/: 010420cef18f_remove_user_table.py  04fde0adbc66_rename_channel_columns_and_add_yt_.py  0be0ff297f6e_add_server_defaults.py  0eb3f6853123_add_posts_table.py  1001e80b684b_added_cascading_video_deletion_when_.py  1a3352bb0537_added_group_members_culumn_to_djs_table.py  2450624e90ee_change_columns_of_tokens_table.py  289a1dbe60a5_add_craeted_at_column_to_liked_videos.py  2ffbd3538fcf_added_tokens_table.py  31bf219b29b4_add_user_videos_id_generation.py  35ebe639c258_cleaning_unused_tables.py  3a0190da28b1_added_djs_table.py  3a33f90aae7c_add_liked_videos_to_users.py  3d756e8f5eea_add_duration_column_to_videos.py  3e42d8173db1_remove_djs.py  3e6e9e0919e5_add_password_field_to_users.py  6819601080a6_add_unique_liked_video_index.py  68877806bd50_added_cascade_delete_and_update_for_.py  68d958550cc4_add_deleted_column_to_videos.py  6b5432d5749e_change_text_column_type_in_posts_table.py  7172bfcfb359_remove_gin_index.py  7e3bdedfd323_add_delete_type.py  814e5913658f_migrate_dj_arrays_to_many_to_many_.py  8545e0ad6bd4_migrate_to_declarative.py  8bdd3a14ff24_add_timezone_to_datetime_types_in_.py  944116eea55e_remove_channels.py  9ac61fa239aa_remove_events_table.py  a4b5b35350f0_add_is_blocked_in_russia_flag.py  a57ac754f90c_add_user_table.py  abc41cb413ee_add_post_edit_history.py  c56146eaf110_add_comments_table.py  c7b1d55e26e5_change_liked_videos.py  c8b2be2c0ece_rename_column_with_activation_code_in_.py  cf908b3cb65b_first_migration.py  e548b42691f0_column_nickname_renamed_to_username.py  ee29f266ee74_add_recovery_code_column_to_users_table.py  f761e61776c9_remove_djs_table.py  f7d3db4a8304_add_bm25_index_to_videos_table.py  fc3b4ccee21e_change_timestamp_to_timestampz.py  ff571c42ee59_add_trgm_index_for_full_text_search.py  (+1 more)
app/: __init__.py  __main__.py  auth.py  crud.py  database.py  db.py  depencies.py  helpers.py  main.py  meilisearch.py  models.py  schemas.py  settings.py  tasks.py  test_main.py  utils.py
app/crud/: channel.py  comment.py  dj.py  event.py  livestream.py  post.py  token.py  user.py  video.py
app/db/: base.py  session.py
app/internal/controller/http/: __init__.py  router.py  tasks.py
app/internal/controller/http/v1/: __init__.py  (+8 more)
app/internal/entity/: comment.py  common.py  livestreams.py  paginator.py  post.py  settings.py  upload.py  user.py  video.py
app/internal/usecase/: comment.py  livestream.py  post.py  upload.py  user.py  user_tokens.py  user_videos.py  video.py
app/internal/usecase/exceptions/: livestream.py  post.py  upload.py  user.py  user_tokens.py  user_videos.py  video.py
app/internal/usecase/repository/: comment.py  livestream.py  permission.py  post.py  upload.py  user.py  user_tokens.py  user_videos.py  video.py
app/models/: __init__.py  channel.py  comment.py  dj.py  event.py  post.py  social_page.py  user.py  video.py
app/pkg/: authzed.py  meilisearch.py  nats.py  postgres.py  s3.py
app/repositories/: user_video.py  video.py
app/routers/: channels.py  comments.py  djs.py  events.py  images.py  livestreams.py  post.py  posts.py  tokens.py  upload.py  user_videos.py  users.py  videos.py
app/schemas/: channel.py  comment.py  dj.py  event.py  file.py  livestreams.py  post.py  token.py  upload.py  user.py  video.py
app/tests/: assertions.py  conftest.py  helpers.py  test_comments.py  test_videos.py
app/tests/api/: test_posts.py  test_users.py  test_videos.py
app/tests/schemas/: channel.json  channels.json  dj.json  djs.json  event.json  events.json
app/tests/schemas/comments/: list.json
app/tests/schemas/videos/: item.json  list.json
deployment/postgresql/initdb/: init-db.sql
deployment/spicedb/: schema.yaml  schema.zed
src/edm_su_api/: __main__.py
src/edm_su_api/internal/entity/: comment.py  common.py  livestreams.py  post.py  settings.py  video.py
src/edm_su_api/internal/usecase/: comment.py  livestream.py  post.py  upload.py  user_videos.py  video.py
src/edm_su_api/pkg/: authzed.py  meilisearch.py  postgres.py  s3.py
tests/: conftest.py  helpers.py
tests/api/: test_channels.py  test_djs.py  test_livestreams.py  test_posts.py  test_tokens.py  test_upload.py  test_users.py  test_videos.py
tests/integration/: conftest.py  test_djs.py  test_livestreams.py  test_posts.py  test_tokens.py  test_upload.py  test_user_videos.py  test_users.py  test_videos.py
tests/integration/repositories/: test_comment.py  test_livestream.py  test_permissions.py  test_post.py  test_upload.py  test_user_videos.py  test_video.py
tests/intergration/: conftest.py
tests/intergration/repositories/: test_comment.py  test_livestream.py  test_post.py  test_upload.py  test_user.py  test_user_tokens.py  test_user_videos.py  test_video.py
tests/schemas/: test_livestreams.py
tests/units/: test_meilisearch.py
tests/units/api/: conftest.py  test_comments.py  test_livestream.py  test_post.py  test_upload.py  test_user.py  test_user_tokens.py  test_user_videos.py  test_video.py
tests/units/api/dependencies/: test_auth.py  test_livestream.py  test_post.py  test_video.py
tests/units/entity/: test_video.py
tests/units/repositories/: test_user_video.py  test_video.py
tests/units/usecases/: conftest.py  test_comment.py  test_livestream.py  test_post.py  test_upload.py  test_user.py  test_user_tokens.py  test_user_videos.py  test_video.py
tests/usecases/: test_video.py
(+57 files in other folders)
