[tool.poetry]
name = "edm_su_api"
version = "3.3.0"
description = "edm.su backend"
authors = ["Egor <eagluhih@gmail.com>"]
license = "MIT"
packages = [{ include = "app" }]

[tool.poetry.dependencies]
python = "^3.10"
alembic = "^1.13"
fastapi = { version = "0.103.2", extras = ["all"] }
Pillow = "^10.0.0"
SQLAlchemy = { extras = ["asyncio"], version = "^2.0" }
python-slugify = { extras = ["unidecode"], version = "^8.0" }
aiohttp = "^3.9.1"
aioboto3 = "^12.0.0"
meilisearch-python-async = "1.8.0"
typing-extensions = "^4.8.0"
greenlet = "^3.0.0"
asyncpg = "^0.29.0"
authzed = "^0.11.0"
aiofiles = "^23.2.1"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.0"
pytest-asyncio = "^0"
Faker = "^19.3.0"
pytest-cov = "^4.0.0"
pytest-mock = "^3.12.0"
pytest-dotenv = "^0.5.2"
pytest-httpx = "^0.27.0"

[tool.poetry.group.lint]
optional = true

[tool.poetry.group.lint.dependencies]
types-python-slugify = "^8.0.0"
mypy = "^1.7.1"
ruff = "^0.1.7"
types-aiofiles = "^23.2.0.0"
pre-commit = "^3.5.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
app = "app.__main__:__main__"

[tool.mypy]
ignore_missing_imports = true
disallow_untyped_defs = true
exclude = ["alembic/*"]
plugins = ["pydantic.mypy"]

[tool.ruff]
select = [
  "E",      # pycodestyle Error
  "F",      # Pyflakes
  "W",      # pycodestyle Warnings
  "C90",    # mccabe
  "I",      # isort
  "N",      #pep8-naming
  "UP",     # pyupgrade
  "YTT",    # flake8-2020
  "ANN",    # flake8-annotations
  "S",      # flake8-bandit
  "BLE",    # flake8-blind-except
  "FBT",    # flake8-boolean-trap
  "B",      # flake8-bugbear
  "A",      # flake8-builtins
  "COM",    # flake8-commas
  "C4",     # flake8-comprehensions
  "DTZ",    # flake8-datetimez
  "T10",    # flake8-debugger
  "EM",     # flake8-errmsg
  "ISC",    # flake8-implicit-str-concat
  "ICN",    # flake8-import-conventions
  "G",      # flake8-logging-format
  "INP",    # flake8-no-pep420
  "PIE",    # flake8-pie
  "T20",    # flake8-print,
  "PT",     # flake8-pytest-style
  "Q",      # flake8-quotes
  "RSE",    # flake8-raise
  "RET",    # flake8-return
  "SLF",    # flake8-self
  "SLOT",   # flake8-slots
  "SIM",    # flake8-simplify
  "TID",    # flake8-tidy-imports
  "TCH",    # flake8-type-checking
  "ARG",    # flake8-unused-arguments
  "PTH",    # flake8-use-pathlib
  "TD",     # flake8-todos
  "FIX",    # flake8-fixme
  "ERA",    # eradicate
  "PGH",    # pygrep-hooks
  "PL",     # Pylint
  "TRY",    # tryceratops
  "FLY",    # flynt
  "PERF",   # perflint
  "RUF",    # Ruff-specific rules
  "ASYNC",  # flake8-async
  "FA",     # flake8-future-annotations
  # "FURB",   # refurb
]
ignore = ["COM812", "ISC001"]

line-length = 79

target-version = "py310"

[tool.ruff.per-file-ignores]
"tests/*" = ["S101", "INP001", "ARG", "PLR0913", "S106", "S105"]
"alembic/*" = ["ANN", "INP"]

[tool.ruff.flake8-bugbear]
extend-immutable-calls = [
  "fastapi.Depends",
  "fastapi.Query",
  "fastapi.Header",
  "fastapi.Body",
  "fastapi.Path",
  "fastapi.File",
]

[tool.ruff.lint.flake8-builtins]
builtins-ignorelist = ["id"]
